testsuite/tests/parser/should_fail/T20385B.hs
{-# LANGUAGE ScopedTypeVariables #-}
module Main where

import Prelude

{-# LANGUAGE RecursiveDo #-}

main = pure ()

foo :: forall a. a -> a
foo x = mdo x
